// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Job with all props 1`] = `
<div
  className="job"
>
  <p
    className="job__title"
  >
    Title!
  </p>
  <p
    className="job__text"
  >
    Text!
  </p>
  <div
    className="job__image"
  >
    <img
      src="Image!"
    />
  </div>
</div>
`;

exports[`Render Job with only title 1`] = `
<div
  className="job"
>
  <p
    className="job__title"
  >
    Title!
  </p>
</div>
`;
